@@ -6,5 +6,5 @@
     "homepage": "https://github.com/smcpeak/factorio-safety-nuke-launcher",
     "factorio_version": "1.1",
     "dependencies": ["base >= 1.1"],
-    "description": "Provides a rocket launcher with minimum range to reduce likelihood of accidentally nuking yourself!"
+    "description": "Provides a rocket launcher with minimum range to reduce likelihood of accidentally nuking yourself!  Also optionally increases maximum nuclear rocket range."
 }
