@@ -14,9 +14,11 @@ safety-nuke-launcher-recipe=Safety nuke launcher
 
 [mod-setting-name]
 safety-nuke-launcher-min-range=Safety nuke launcher minimum range
+safety-nuke-launcher-range-bonus=Set nuclear rocket range bonus to 300%
 
 [mod-setting-description]
-safety-nuke-launcher-min-range=The launcher will refuse to fire at locations within this range.  For comparison, the max range when firing non-nukes is 36, for nukes it is 108, and the nuclear explosion radius is 35 (in an unmodded game).
+safety-nuke-launcher-min-range=The launcher will refuse to fire at locations closer than this many tiles.  For comparison, the max range when firing non-nukes is 36, for nukes it is 54 or 108 (see next option), and the nuclear explosion radius is 35 (in an unmodded game).
+safety-nuke-launcher-range-bonus=Independent of what launcher is used, this sets the range bonus of nuclear rockets to 300% (its pre-1.0 value) instead of 150%, making its effective range 108 tiles.
 
 [technology-name]
 safety-nuke-launcher-technology=Safety nuke launcher
